# donut

./: .clang-format  .gitignore  .gitmodules  BuildVulkanShaders.bat  CMakeLists.txt  Donut.sln  Donut.vcxproj  Donut.vcxproj.filters  donut.sublime-project  donut.sublime-workspace  notes.txt  project.props
src/: abstract.h  application.cpp  application.h  donut_pch.cpp  donut_pch.h  icanvas.h  indexbuffer.cpp  indexbuffer.h  main.cpp  mesh.cpp  mesh.h  noncopyable.h  shader.cpp  shader.h  shadersection.cpp  shadersection.h  testcanvas.cpp  testcanvas.h  vertexbuffer.cpp  vertexbuffer.h  vertexelement.h  vertexlayout.cpp  vertexlayout.h  window.cpp  window.h
src/glad/src/: glad.c
src/render_impl/: indexbuffer_impl.h  render_impl.h  shader_impl.h  shadersection_impl.h  vertexbuffer_impl.h  vertexlayout_impl.h
src/render_impl/opengl/: opengl_glfw_window.cpp  opengl_glfw_window.h  opengl_indexbuffer.cpp  (+7 more)
src/renderer/: framebuffer.h  glfw_window.cpp  glfw_window.h  icanvas.h  ilayer.h  image.cpp  image.h  imagedata.cpp  imagedata.h  indexbuffer.h  iwindow.h  layerstack.cpp  layerstack.h  material.h  mesh.cpp  mesh.h  primitivetype.h  renderer.h  shader.cpp  shader.h  shadersection.cpp  shadersection.h  texture2d.cpp  texture2d.h  vertexbuffer.cpp  vertexbuffer.h  vertexelement.h  vertexlayout.cpp  vertexlayout.h  window.cpp  window.h
src/scene/: entity.cpp  entity.h  scene.cpp  scene.h
src/system/: allocator.cpp  allocator.h  job.cpp  job.h
src/test/: TestLayer.cpp  TestLayer.h  emittercomponent.h  emittersystem.cpp  emittersystem.h  lifetimecomponent.h  lifetimesystem.cpp  lifetimesystem.h  testcanvas.cpp  testcanvas.h  velocitycomponent.h  velocitysystem.cpp  velocitysystem.h
src/utils/: file_utils.cpp  file_utils.h  math_utils.h  memory_utils.h  string_utils.h
vulkan_test_app/: vulkan_test_app.sln  vulkan_test_app.vcxproj  vulkan_test_app.vcxproj.filters
vulkan_test_app/src/: main.cpp
(+110 files in other folders)
